# Bootcamp-Python-for-Machine-Learning-by-42AI

./: README.md
.github/workflows/: pylint.yml
day00/: installer.sh  launch.sh
day00/ex00/: installer.sh  launch.sh
day00/ex01/: exec.py
day00/ex02/: .whois.py.swp  whois.py
day00/ex03/: .count.py.swp  count.py
day00/ex04/: operations.py
day00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
day00/ex06/: recipe.py
day00/ex07/: filterwords.py
day00/ex08/: sos.py
day00/ex09/: guess.py
day00/ex10/: loading.py
day01/ex00/: book.py  recipe.py  test.py
day02/resources/: good.csv
module_00/ex00/: answers.txt  installer.sh  requirements.txt
module_00/ex01/: exec.py
module_00/ex03/: count.py
module_00/ex04/: operations.py
module_00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
module_00/ex06/: recipe.py
module_00/ex10/: loading.py
module_01/ex00/: book.py  recipe.py  test.py
module_01/ex01/: game.py
module_01/ex02/: README.md  test.py  vector.py
module_01/ex03/: generator.py
module_01/ex04/: eval.py
module_01/ex05/: the_bank.py
module_01/resources/: banking_test1.py  banking_test2.py
module_02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
module_02/ex01/: main.py
module_02/ex02/: logger.py
module_02/ex03/: csvreader.py
module_02/ex04/: README.md  build.sh  setup.cfg  setup.py
module_02/ex04/src/: loading.py
module_02/ex04/src/my_minipackage/: logger.py
module_03/ex00/: NumPyCreator.py  NumpyCreator.py
module_03/ex01/: ImageProcessor.py
module_03/ex04/: Kmeans.py
python/: README.md
(+26 files in other folders)
