[metadata]
name = my-minipack
version = 1.0.0
author = Antoine Barthelemy
author_email = abarthel@student.42.fr
description = Howto create a package in python.
long_description = file: README.md
long_description_content_type = text/markdown
installer = pip
url = None
project_urls =
    Bug Tracker = None
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Students
    Topic :: Education
    Topic :: HowTo
    Topic :: Package
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
